# unifi-dns4me

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UniFi Sync & Failover Design.md  docker-compose.yml  pyproject.toml  unraid-container.xml
.github/workflows/: docker-image.yml
src/unifi_dns4me/: __init__.py  cli.py  dns4me.py  notify.py  state.py  unifi.py
tests/: test_daemon.py  test_dns4me.py  test_heartbeat_config.py  test_notify.py  test_state.py  test_sync_plan.py  test_unifi_policy.py
