[project]
name = "unifi-dns4me"
version = "1.6.0"
description = "Sync DNS4ME dnsmasq conditional forwarding rules into UniFi DNS Forward Domain policies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "unifi-dns4me contributors" }]
dependencies = [
  "apprise>=1.9",
  "requests>=2.32",
]

[project.scripts]
unifi-dns4me = "unifi_dns4me.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
